    - Made vacuum tubes slightly cheaper, by lowering the amount of resources compared to their original recipe.
    - Changed the first plastic science technology to also take R-NM packs.
    - Deleted oscilliscopes and merged them into RCU's, since there was no use for them being their own thing.
    - Changed RCU's to take 35 seconds, instead of 30 seconds.

  Fixes:
    - Fixed the science pack item names captilisation.
    - (Mostly) Fixed the Factoriopedia being a mess. Never not name your recipes after their outputs.
    - Fixed empty reactor cells taking 0.5s to craft, and not 20s. Sucks to suck, huh?
    - Finally got rid of the plastic bar item that appears in the factoriopedia and item menus.
    - Re-ordered science to actually be in the correct order (normal > plastic > francium)
    - Fixed the ordering of certain subgroups, for real this time.
    - Fixed random things like explosives not being in the presumably correct category.
    - Made slugs actually work with 2.0, im not sure how well they now work so any balance or suggestions are greatly appreciated.
    - Changed byproduct handling to be unlockable from ezekiel processing, and not transition metal leeching.

---------------------------------------------------------------------------------------------------
Version: 0.6.141
Date: 2025-01-11
  The boulder made of byproducts Update:

  Changes:
    - Changed chromic versions of ferrum and patina leeching to give off no ore and a slight amount of ore slag.
    - Changed boron and cadmium recipes to give off patina instead of ferrum.
    - Redoubled red science to take 2 iron and nickel plates.

  Fixes:
    - Fixed tellurium plates being unlocked at the start of the game.
    - Gave all forms of transportation a return inventory for spent fuel.
    - Fixed residual locales.

---------------------------------------------------------------------------------------------------
Version: 0.6.139
Date: 2025-01-09