@@ -149,7 +149,8 @@ data:extend({
         results = 
         {
             PM.product("pm-antimony-sulfide", 8),
-            PM.product_range("pm-catalyst-container", 1, 2)
+            PM.catalyst_range("pm-vanadium-oxide-catalyst", 2, 0.75, 2),
+            PM.product_range_chance("pm-catalyst-container", 1, 2, 0.25, 2)
         }
     },
     {
